<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/beginning_of_budget_cycle"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/a_settings_cycle_beginning"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/no_active_cycle_available"
            android:textSize="18sp" />

        <Button
            android:id="@+id/a_settings_start_cycle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/start_new_cycle"
            android:textSize="18sp" />

        <include layout="@layout/w_divider" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="onSelectCurrency"
            android:text="@string/select_currency"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>